added signin page

--- a/contact.html
+++ b/contact.html
@@ -90,6 +90,8 @@
       <li><a href="facilities.html">FACILITIES</a></li>
       <li><a href="news.html">NEWS</a></li>
       <li><a href="contact.html">CONTACT</a></li>
+      <li><a href="signin.html">SIGNIN</a></li>
+
     </ul>
   </div>
   <!-- end menu -->
@@ -165,6 +167,8 @@
         <li><a href="facilities.html">FACILITIES</a></li>
         <li><a href="news.html">NEWS</a></li>
         <li><a href="contact.html">CONTACT</a></li>
+        <li><a href="signin.html">SIGNIN</a></li>
+
       </ul>
     </div>
     <!-- end menu --> 
