--- a/alipes/files/products.html
+++ b/alipes/files/products.html
@@ -624,8 +624,7 @@
                                         </ul>
                                         <ul class="footer-widget__explore-list list-unstyled">
                                             <li><a href="news.html">News</a></li>
-                                            <li><a href="about.html">Feedbacks</a></li>
-                                            <li><a href="products.html">Shop</a></li>
+                                            
                                             <li><a href="about.html">Privacy Policy</a></li>
                                         </ul>
                                     </div>
@@ -636,8 +635,7 @@
                                     <div class="footer-widget__title-box">
                                         <h3 class="footer-widget__title">Contact</h3>
                                     </div>
-                                    <p class="footer-widget__contact-text">30 Road Broklyn Street, 600 <br> New York,
-                                        USA
+                                    <p class="footer-widget__contact-text">B75,R.T.O Relocation Bhuj –  <br> kutch, 370001, Gujarat, India.
                                     </p>
                                     <ul class="footer-widget__contact-list list-unstyled">
                                         <li>
@@ -645,7 +643,7 @@
                                                 <span class="fas fa-envelope"></span>
                                             </div>
                                             <div class="text">
-                                                <p><a href="mailto:needhelp@company.com">needhelp@company.com</a></p>
+                                                <p><a href="mailto:needhelp@company.com">uditrajgroup@gmail.com</a></p>
                                             </div>
                                         </li>
                                         <li>
@@ -653,7 +651,7 @@
                                                 <span class="icon-telephone"></span>
                                             </div>
                                             <div class="text">
-                                                <p><a href="tel:+9288006780">+92 ( 8800 ) - 6780</a></p>
+                                                <p><a href="tel:+919924882211">+919924882211</a></p>
                                             </div>
                                         </li>
                                     </ul>
@@ -683,10 +681,12 @@
                             </div>
                             <div class="site-footer__bottom-right">
                                 <div class="site-footer__social">
-                                    <a href="#"><i class="fab fa-twitter"></i></a>
-                                    <a href="#"><i class="fab fa-facebook"></i></a>
-                                    <a href="#"><i class="fab fa-pinterest-p"></i></a>
-                                    <a href="#"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://www.facebook.com/Uditraj-Properties-And-Construction-374002023310410"><i class="fab fa-facebook-f"></i></a>
+                                    <a href="https://www.instagram.com/uditrajgroup/?hl=en"><i class="fab fa-instagram"></i></a>
+                                    <a href="https://twitter.com/uditrajgroup"><i class="fab fa-twitter"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCdJsunAsscFz-soggX0P3cg"><i class="fab fa-youtube"></i></a>
+                                    <a href="uditraj9999@gmail.com" herf="uditrajgroup@gmail.com"><i class="fab fa-google"></i></a>
+                                    <a href="https://api.whatsapp.com/send?phone=919924882211&text=&source=&data=&app_absent"><i class="fab fa-whatsapp"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -698,7 +698,6 @@
 
 
     </div><!-- /.page-wrapper -->
-
 
     <div class="mobile-nav__wrapper">
         <div class="mobile-nav__overlay mobile-nav__toggler"></div>
@@ -717,11 +716,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@alipes.com</a>
+                    <a href="mailto:needhelp@packageName__.com">uditrajgroup@gmail.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+91 9924882211">+91 9924882211</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
