--- a/alipes/files/checkout.html
+++ b/alipes/files/checkout.html
@@ -670,7 +670,6 @@
 
     </div><!-- /.page-wrapper -->
 
-
     <div class="mobile-nav__wrapper">
         <div class="mobile-nav__overlay mobile-nav__toggler"></div>
         <!-- /.mobile-nav__overlay -->
@@ -688,11 +687,11 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">needhelp@alipes.com</a>
+                    <a href="mailto:needhelp@packageName__.com">uditrajgroup@gmail.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:666-888-0000">666 888 0000</a>
+                    <a href="tel:+91 9924882211">+91 9924882211</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
